<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.login.LoginFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/first_name"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/last_name"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Select Level"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/rad_level"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/et_bg"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rad_beginner"
                        android:text="Beginner"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:checked="false" />
                    <RadioButton
                        android:id="@+id/rad_intermediate"
                        android:text="Intermediate"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:checked="false" />
                    <RadioButton
                        android:id="@+id/rad_advanced"
                        android:text="Advanced"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Enter e-mail"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/sign_up_now"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>